Bug: PRD Reviewer: Peter Comment: Add UI for setting a quota on a binder